spacing fix

--- a/src/index.css
+++ b/src/index.css
@@ -103,6 +103,7 @@
 		left: 0;
 		top: 0;
 		z-index: -1;
+		background-color: rgba(0, 0, 0, 0.05);
 		transition: var(--wfm-transition);
 	}
 	&:hover {
